chore(tmux): navi shortcut
Signed-off-by: Alessandro Martini <18130319+martini97@users.noreply.github.com>

--- a/tmux/dot-config/tmux/tmux.conf
+++ b/tmux/dot-config/tmux/tmux.conf
@@ -43,7 +43,7 @@ bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -c "#{pane_current_path}"
 
 bind-key C-t display-popup -E -w 60% -h 60% -d "#{pane_current_path}"
-bind-key C-g display-popup -E -w 90% -h 90% -d "#{pane_current_path}" lazygit
+# bind-key C-g display-popup -E -w 90% -h 90% -d "#{pane_current_path}" lazygit
 
 bind-key C-r switch-client -T RESIZE
 bind-key -T RESIZE h {
@@ -104,3 +104,6 @@ bind @ if-shell -F '#{!=:#{session_name},floating}' {
 } {
   run-shell 'bash -c "tmux break-pane -d -s floating -t \"$(tmux show -gvq '@last_session_name'):\""'
 }
+
+bind -T prefix C-n split-window \
+  "navi --print | tmux load-buffer -b tmp - ; tmux paste-buffer -p -t {last} -b tmp -d"
