feat(fish,playbook): aws cli
Signed-off-by: Alessandro Martini <18130319+martini97@users.noreply.github.com>

--- a/playbook/main.yaml
+++ b/playbook/main.yaml
@@ -61,6 +61,7 @@
           - golang
           - pgcli
           - navi
+          - awscli2
         state: present
 
     - name: flatpak | install packages
