chore(playbook): install some extra tools
Signed-off-by: Alessandro Martini <18130319+martini97@users.noreply.github.com>

--- a/playbook/main.yaml
+++ b/playbook/main.yaml
@@ -62,6 +62,10 @@
           - pgcli
           - navi
           - awscli2
+          - httpie
+          - procs
+          - podman-docker
+          - podman-compose
         state: present
 
     - name: flatpak | install packages
