chore(playbook): playwright dependencies
Signed-off-by: Alessandro Martini <18130319+martini97@users.noreply.github.com>

--- a/playbook/main.yaml
+++ b/playbook/main.yaml
@@ -66,6 +66,14 @@
           - procs
           - podman-docker
           - podman-compose
+          # playwright deps {{{
+          - libicu
+          - libjpeg-turbo
+          - libwebp
+          - flite
+          - pcre
+          - libffi
+          # }}}
         state: present
 
     - name: flatpak | install packages
