--- a/playbook/main.yaml
+++ b/playbook/main.yaml
@@ -125,3 +125,13 @@
     - name: blueetooth | setup
       ansible.builtin.import_tasks: tasks/blueetooth.yml
       tags: ['blueetooth']
+
+    - name: podman | no docker
+      become: true
+      become_user: root
+      ansible.builtin.copy:
+        content: ''
+        dest: /etc/containers/nodocker
+        force: false
+        mode: 0555
+      tags: ['podman']
