--- a/tmux/dot-config/tmux/tmux.conf
+++ b/tmux/dot-config/tmux/tmux.conf
@@ -107,3 +107,45 @@ bind @ if-shell -F '#{!=:#{session_name},floating}' {
 
 bind -T prefix C-n split-window \
   "navi --print | tmux load-buffer -b tmp - ; tmux paste-buffer -p -t {last} -b tmp -d"
+
+bind-key C-r switch-client -T RESIZE
+
+bind-key -T RESIZE h {
+  resize-pane -L
+  switch-client -T RESIZE
+}
+
+bind-key -T RESIZE j {
+  resize-pane -D
+  switch-client -T RESIZE
+}
+
+bind-key -T RESIZE k {
+  resize-pane -U
+  switch-client -T RESIZE
+}
+
+bind-key -T RESIZE l {
+  resize-pane -R
+  switch-client -T RESIZE
+}
+
+bind-key -T RESIZE H {
+  resize-pane -L 5
+  switch-client -T RESIZE
+}
+
+bind-key -T RESIZE J {
+  resize-pane -D 5
+  switch-client -T RESIZE
+}
+
+bind-key -T RESIZE K {
+  resize-pane -U 5
+  switch-client -T RESIZE
+}
+
+bind-key -T RESIZE L {
+  resize-pane -R 5
+  switch-client -T RESIZE
+}
