--- a/kitty/dot-config/kitty/kitty.conf
+++ b/kitty/dot-config/kitty/kitty.conf
@@ -1,10 +1,12 @@
 font_size 14.0
+allow_remote_control socket
+listen_on            unix:/tmp/mykitty
 
 # BEGIN_KITTY_FONTS
-font_family      family="JetBrains Mono"
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+font_family      family='JetBrains Mono' features=+zero
+bold_font        family='JetBrains Mono' style=ExtraBold features=+zero
+italic_font      family='JetBrains Mono' style='Light Italic' features=+zero
+bold_italic_font family='JetBrains Mono' style='Bold Italic' features=+zero
 # END_KITTY_FONTS
 
 
