--- a/git/dot-config/git/config
+++ b/git/dot-config/git/config
@@ -38,3 +38,11 @@
 
 [includeIf "hasconfig:remote.*.url:git@github.com:**/**"]
   path = config.github
+
+[credential "https://github.com"]
+  helper =
+  helper = !/usr/bin/gh auth git-credential
+
+[credential "https://gist.github.com"]
+  helper = =
+  helper = !/usr/bin/gh auth git-credential
