--- a/playbook/main.yaml
+++ b/playbook/main.yaml
@@ -38,6 +38,14 @@
         mode: "0644"
 
   tasks:
+    - name: misc | uninstall system packages
+      become: true
+      become_user: root
+      ansible.builtin.dnf5:
+        name:
+          - docker-ce-cli
+        state: absent
+
     - name: misc | install system packages
       become: true
       become_user: root
