--- a/playbook/tasks/neovim.yml
+++ b/playbook/tasks/neovim.yml
@@ -51,9 +51,11 @@
     global: true
     state: present
   loop:
+    - "typescript"
     - "@fsouza/prettierd"
     - "eslint_d"
     - "@vue/language-server"
+    - "@vue/typescript-plugin"
     - "@vtsls/language-server"
     - "vscode-langservers-extracted"
     - "pyright"
