chore(playbook): install beancount
Signed-off-by: Alessandro Martini <18130319+martini97@users.noreply.github.com>

--- a/playbook/main.yaml
+++ b/playbook/main.yaml
@@ -172,3 +172,7 @@
         force: false
         mode: 0555
       tags: ['podman']
+
+    - name: beancount | install beancount
+      ansible.builtin.pip:
+        name: beancount
