--- a/playbook/main.yaml
+++ b/playbook/main.yaml
@@ -178,3 +178,18 @@
     - name: beancount | install beancount
       ansible.builtin.pip:
         name: beancount
+
+    - name: ghostty
+      block:
+        - name: ghostty | enable coprs
+          become: true
+          become_user: root
+          community.general.copr:
+            state: enabled
+            name: pgdev/ghostty
+        - name: ghostty | install ghostty
+          become: true
+          become_user: root
+          ansible.builtin.dnf5:
+            name: ghostty
+            state: present
