feat(hyprland): setup hyprland (maybe?) godspeed me
Signed-off-by: Alessandro Martini <18130319+martini97@users.noreply.github.com>

--- a/playbook/main.yaml
+++ b/playbook/main.yaml
@@ -193,3 +193,8 @@
           ansible.builtin.dnf5:
             name: ghostty
             state: present
+
+    - name: hyprland | setup
+      ansible.builtin.import_tasks: tasks/hyprland.yml
+      tags: ['hyprland']
+
