--- a/playbook/main.yaml
+++ b/playbook/main.yaml
@@ -92,6 +92,8 @@
           - steam-devices
           # }}}
           - lutris
+          - protontricks
+          - winetricks
           - qutebrowser
         state: present
 
