chore(kitty): update
Signed-off-by: Alessandro Martini <18130319+martini97@users.noreply.github.com>

--- a/kitty/dot-config/kitty/kitty.conf
+++ b/kitty/dot-config/kitty/kitty.conf
@@ -2,6 +2,8 @@ font_size 14.0
 allow_remote_control socket
 listen_on            unix:/tmp/mykitty
 
+enabled_layouts splits,stack
+
 # BEGIN_KITTY_FONTS
 font_family      family='JetBrains Mono' features=+zero
 bold_font        family='JetBrains Mono' style=ExtraBold features=+zero
@@ -14,3 +16,26 @@ bold_italic_font family='JetBrains Mono' style='Bold Italic' features=+zero
 # Ayu
 include current-theme.conf
 # END_KITTY_THEME
+
+kitty_mod alt
+
+map kitty_mod+z combine : toggle_layout stack : scroll_prompt_to_bottom
+
+map kitty_mod+shift+t new_tab
+map kitty_mod+shift+q quit
+map kitty_mod+shift+r start_resizing_window
+
+map kitty_mod+h neighboring_window left
+map kitty_mod+j neighboring_window bottom
+map kitty_mod+k neighboring_window top
+map kitty_mod+l neighboring_window right
+
+map kitty_mod+shift+h move_window left
+map kitty_mod+shift+j move_window bottom
+map kitty_mod+shift+k move_window top
+map kitty_mod+shift+l move_window right
+
+map kitty_mod+ctrl+v launch --location=vsplit --cwd=current
+map kitty_mod+ctrl+s launch --location=hsplit --cwd=current
+
+map kitty_mod+ctrl+j quick-access-terminal
