--- a/kitty/dot-config/kitty/kitty.conf
+++ b/kitty/dot-config/kitty/kitty.conf
@@ -2,7 +2,7 @@ font_size 14.0
 allow_remote_control socket
 listen_on            unix:/tmp/mykitty
 
-enabled_layouts splits,stack
+enabled_layouts splits,stack,fat,tall,vertical
 
 # BEGIN_KITTY_FONTS
 font_family      family='JetBrains Mono' features=+zero
@@ -11,31 +11,30 @@ italic_font      family='JetBrains Mono' style='Light Italic' features=+zero
 bold_italic_font family='JetBrains Mono' style='Bold Italic' features=+zero
 # END_KITTY_FONTS
 
-
 # BEGIN_KITTY_THEME
 # Ayu
 include current-theme.conf
 # END_KITTY_THEME
 
-kitty_mod alt
+map ctrl+a>z combine : toggle_layout stack : scroll_prompt_to_bottom
+map ctrl+a>c new_tab
+map ctrl+a>d quit
+map ctrl+a>r start_resizing_window
+map ctrl+a>h neighboring_window left
+map ctrl+a>j neighboring_window bottom
+map ctrl+a>k neighboring_window top
+map ctrl+a>l neighboring_window right
+map ctrl+a>space next_layout
+map ctrl+a>f select_tab
 
-map kitty_mod+z combine : toggle_layout stack : scroll_prompt_to_bottom
+map ctrl+a>ctrl+h move_window left
+map ctrl+a>ctrl+j move_window bottom
+map ctrl+a>ctrl+k move_window top
+map ctrl+a>ctrl+l move_window right
 
-map kitty_mod+shift+t new_tab
-map kitty_mod+shift+q quit
-map kitty_mod+shift+r start_resizing_window
+map ctrl+a>v launch --location=vsplit --cwd=current
+map ctrl+a>s launch --location=hsplit --cwd=current
 
-map kitty_mod+h neighboring_window left
-map kitty_mod+j neighboring_window bottom
-map kitty_mod+k neighboring_window top
-map kitty_mod+l neighboring_window right
+map ctrl+a>ctrl+a send_text all \x01
 
-map kitty_mod+shift+h move_window left
-map kitty_mod+shift+j move_window bottom
-map kitty_mod+shift+k move_window top
-map kitty_mod+shift+l move_window right
-
-map kitty_mod+ctrl+v launch --location=vsplit --cwd=current
-map kitty_mod+ctrl+s launch --location=hsplit --cwd=current
-
-map kitty_mod+ctrl+j quick-access-terminal
+map ctrl+a>ctrl+f find_in_tabs
