kitty: add scrollback pager
Signed-off-by: Alessandro Martini <18130319+martini97@users.noreply.github.com>

--- a/kitty/dot-config/kitty/kitty.conf
+++ b/kitty/dot-config/kitty/kitty.conf
@@ -2,6 +2,11 @@ font_size 14.0
 allow_remote_control socket
 listen_on            unix:/tmp/mykitty
 
+shell_integration enabled
+scrollback_pager  sh -c 'nvim 63<&0 </dev/null -u NONE -i NONE -c "au VimEnter * term cat /dev/fd/63 && sleep 1000"'
+map ctrl+a>[ show_scrollback
+map ctrl+a>g show_last_command_output
+
 enabled_layouts splits,stack,fat,tall,vertical
 
 # BEGIN_KITTY_FONTS
