chore(kitty): small updates
Signed-off-by: Alessandro Martini <18130319+martini97@users.noreply.github.com>

--- a/kitty/dot-config/kitty/kitty.conf
+++ b/kitty/dot-config/kitty/kitty.conf
@@ -8,6 +8,7 @@ map ctrl+a>[ show_scrollback
 map ctrl+a>g show_last_command_output
 
 enabled_layouts splits,stack,fat,tall,vertical
+tab_title_template "{f'{fmt.bg.black}{fmt.fg.red}{fmt.bold}[ZOOM]{fmt.fg.tab}{fmt.bg.tab} ' if layout_name == 'stack' else ''}{fmt.fg.red}{bell_symbol}{fmt.fg.tab}{title}"
 
 # BEGIN_KITTY_FONTS
 font_family      family='JetBrains Mono' features=+zero
@@ -31,6 +32,9 @@ map ctrl+a>k neighboring_window top
 map ctrl+a>l neighboring_window right
 map ctrl+a>space next_layout
 map ctrl+a>f select_tab
+map ctrl+a>n next_tab
+map ctrl+a>p previous_tab
+map ctrl+a>t set_tab_title
 
 map ctrl+a>ctrl+h move_window left
 map ctrl+a>ctrl+j move_window bottom
