chore(beets): add convert plugin
Signed-off-by: Alessandro Martini <18130319+martini97@users.noreply.github.com>

--- a/beets/dot-config/beets/config.yaml
+++ b/beets/dot-config/beets/config.yaml
@@ -9,7 +9,7 @@ statefile: state.pickle
 
 # --------------- Plugins ---------------
 
-plugins: ["fetchart"]
+plugins: ["fetchart", "convert"]
 pluginpath: []
 
 # --------------- Import ---------------
