chore(kitty): disable ctrl+a leader
Signed-off-by: Alessandro Martini <18130319+martini97@users.noreply.github.com>

--- a/kitty/dot-config/kitty/kitty.conf
+++ b/kitty/dot-config/kitty/kitty.conf
@@ -4,8 +4,8 @@ listen_on            unix:/tmp/mykitty
 
 shell_integration enabled
 scrollback_pager  sh -c 'nvim 63<&0 </dev/null -u NONE -i NONE -c "au VimEnter * term cat /dev/fd/63 && sleep 1000"'
-map ctrl+a>[ show_scrollback
-map ctrl+a>g show_last_command_output
+# map ctrl+a>[ show_scrollback
+# map ctrl+a>g show_last_command_output
 
 enabled_layouts splits,stack,fat,tall,vertical
 tab_title_template "{f'{fmt.bg.black}{fmt.fg.red}{fmt.bold}[ZOOM]{fmt.fg.tab}{fmt.bg.tab} ' if layout_name == 'stack' else ''}{fmt.fg.red}{bell_symbol}{fmt.fg.tab}{title}"
@@ -22,28 +22,28 @@ bold_italic_font family='JetBrains Mono' style='Bold Italic' features=+zero
 include current-theme.conf
 # END_KITTY_THEME
 
-map ctrl+a>z combine : toggle_layout stack : scroll_prompt_to_bottom
-map ctrl+a>c new_tab
-map ctrl+a>d quit
-map ctrl+a>r start_resizing_window
-map ctrl+a>h neighboring_window left
-map ctrl+a>j neighboring_window bottom
-map ctrl+a>k neighboring_window top
-map ctrl+a>l neighboring_window right
-map ctrl+a>space next_layout
-map ctrl+a>f select_tab
-map ctrl+a>n next_tab
-map ctrl+a>p previous_tab
-map ctrl+a>t set_tab_title
+# map ctrl+a>z combine : toggle_layout stack : scroll_prompt_to_bottom
+# map ctrl+a>c new_tab
+# map ctrl+a>d quit
+# map ctrl+a>r start_resizing_window
+# map ctrl+a>h neighboring_window left
+# map ctrl+a>j neighboring_window bottom
+# map ctrl+a>k neighboring_window top
+# map ctrl+a>l neighboring_window right
+# map ctrl+a>space next_layout
+# map ctrl+a>f select_tab
+# map ctrl+a>n next_tab
+# map ctrl+a>p previous_tab
+# map ctrl+a>t set_tab_title
 
-map ctrl+a>ctrl+h move_window left
-map ctrl+a>ctrl+j move_window bottom
-map ctrl+a>ctrl+k move_window top
-map ctrl+a>ctrl+l move_window right
+# map ctrl+a>ctrl+h move_window left
+# map ctrl+a>ctrl+j move_window bottom
+# map ctrl+a>ctrl+k move_window top
+# map ctrl+a>ctrl+l move_window right
 
-map ctrl+a>v launch --location=vsplit --cwd=current
-map ctrl+a>s launch --location=hsplit --cwd=current
+# map ctrl+a>v launch --location=vsplit --cwd=current
+# map ctrl+a>s launch --location=hsplit --cwd=current
 
-map ctrl+a>ctrl+a send_text all \x01
+# map ctrl+a>ctrl+a send_text all \x01
 
-map ctrl+a>ctrl+f find_in_tabs
+# map ctrl+a>ctrl+f find_in_tabs
